// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toggleField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <label
        aria-disabled="false"
        class="uv_mhtya39 uv_mhtya3a uv_mhtya3d"
        for="_r_0_"
      >
        <div
          class="uv_mxir930 uv_mxir931j uv_mxir932d uv_mxir935d"
        />
        <div
          class="uv_mhtya30 uv_mhtya31 uv_mhtya33 uv_mhtya35"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            class="uv_mhtya38"
            id="_r_0_"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </form>
  </div>
</DocumentFragment>
`;

exports[`toggleField > should render correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <label
        aria-disabled="false"
        class="uv_mhtya39 uv_mhtya3a uv_mhtya3d"
        for="_r_8_"
      >
        <div
          class="uv_mxir930 uv_mxir931j uv_mxir932d uv_mxir935d"
        />
        <div
          class="uv_mhtya30 uv_mhtya31 uv_mhtya33 uv_mhtya35"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            checked=""
            class="uv_mhtya38"
            id="_r_8_"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </form>
  </div>
</DocumentFragment>
`;

exports[`toggleField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <label
        aria-disabled="true"
        class="uv_mhtya39 uv_mhtya3b uv_mhtya3d"
        for="_r_4_"
      >
        <div
          class="uv_mxir930 uv_mxir931j uv_mxir932d uv_mxir935d"
        />
        <div
          class="uv_mhtya30 uv_mhtya32 uv_mhtya33 uv_mhtya35"
        >
          <input
            aria-disabled="true"
            aria-invalid="false"
            class="uv_mhtya38"
            disabled=""
            id="_r_4_"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </form>
  </div>
</DocumentFragment>
`;

exports[`toggleField > should render correctly with label and checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <label
        aria-disabled="false"
        class="uv_mhtya39 uv_mhtya3a uv_mhtya3d"
        for="_r_c_"
      >
        <div
          class="uv_mxir930 uv_mxir931j uv_mxir932d uv_mxir935d"
        >
          <div
            class="uv_78oem50 uv_78oem5d uv_78oem52j"
            style="--uv_ivy5ld0: auto 1fr; --uv_ivy5ld1: auto 1fr; --uv_ivy5ld2: auto 1fr; --uv_ivy5ld3: auto 1fr; --uv_ivy5ld4: auto 1fr; --uv_ivy5ld5: auto 1fr;"
          >
            <span
              class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
              for="_r_c_"
            >
              test
            </span>
          </div>
        </div>
        <div
          class="uv_mhtya30 uv_mhtya31 uv_mhtya33 uv_mhtya35"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            checked=""
            class="uv_mhtya38"
            id="_r_c_"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </form>
  </div>
</DocumentFragment>
`;
